# 2022-09-Python-Course

./: 2022-10-12.txt  2023-05-12-Test.py  excercise_a.py  excercise_a_class_inherited.py  excercise_b_wheel_snow.py  excercise_c_fibonacci.py  excercise_d_bst_key.py  lesson_a_functions_def.py  lesson_b.py  lesson_c_class_declaration.py  lesson_d_encapsulation.py  lesson_e_slots.py  lesson_f_inheritance.py  lesson_g_name_mangling.py  lesson_h_data_model.py  lesson_j_vectors.py  lesson_k_del.py  lesson_l_format.py  lesson_m_trace.py  lesson_n_hash.py  lesson_nn_a.py  lesson_o_callable.py  lesson_p_emulate_number.py  lesson_q_conversion.py  lesson_r_iterator.py  lesson_s_yield.py  lesson_t_yield.py  pyproject.toml  test.ipynb  test.py  xxx.py
my_includes/: __init__.py  lesson_i_static_method.py  shaka.py
